examples/shop/cart/app-repo/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cart
  labels:
    istio.io/rev: asm-managed
