examples/shop/cart/app-repo/k8s/base/se.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: cart
spec:
  hosts:
  - cart.cart.svc.cluster.local
  ports:
  - name: cart
    number: 7070
    protocol: GRPC
  resolution: DNS
