examples/shop/cart/app-repo/k8s/base/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: cart-virtualservice
    namespace: cart
spec:
    hosts:
    - cart.cart.svc.cluster.local
    gateways:
    - asm-ingress-gw/asm-ingressgateway
    http:
    - route:
      - destination:
          host: cart
          port:
            number: 7070
